fixed button, started working on mobile, fixed most of mobile

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,26 @@
 // Mixins Here
+
+
+@btn-color: #050561;
+
+.displayFlex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.buttonMixin(@bg-color, @color) {
+  background-color: @bg-color;
+  border: none;
+  color: @color;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 10px;
+  &:hover {
+    background-color: white;
+    color: @btn-color;
+  }
+}
