--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,26 @@
 // Navigation code here
+
+.nav-menu {
+    width: 100%;
+    margin-left: 4%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: 0 auto;
+    h1 {
+        font-size: 3rem;
+        text-align: center;
+        padding: 2% 0 4% 0;
+    }
+    nav {
+        padding-bottom: 1%;
+        width: 100%;
+        text-align: center;
+    }
+    a {
+        text-decoration: none;
+        color: black;
+        padding: 0 1% 0 1%;
+        font-size: 1.5rem;
+    }
+}
