--- a/watch/index.css
+++ b/watch/index.css
@@ -1,8 +1,3 @@
-.displayFlex {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -166,28 +161,14 @@ p {
   margin: 0 auto;
 }
 .nav-menu {
-  width: 100%;
-  margin-left: 4%;
+  color: red;
+  margin-right: 5%;
+  padding: 50%;
   display: flex;
-  align-items: center;
-  flex-direction: column;
-  margin: 0 auto;
+  justify-content: center;
 }
 .nav-menu h1 {
-  font-size: 3rem;
-  text-align: center;
-  padding: 2% 0 4% 0;
-}
-.nav-menu nav {
-  padding-bottom: 1%;
-  width: 100%;
-  text-align: center;
-}
-.nav-menu a {
-  text-decoration: none;
-  color: black;
-  padding: 0 1% 0 1%;
-  font-size: 1.5rem;
+  font-size: 10rem;
 }
 footer {
   color: #22283B;
@@ -264,25 +245,4 @@ footer {
 .home .btn:hover {
   background-color: white;
   color: #050561;
-}
-@media (max-width: 500px) {
-  .sky,
-  .launch {
-    display: none;
-  }
-  img {
-    margin: 0 auto;
-    width: 100%;
-    height: auto;
-  }
-  .walk {
-    display: flex;
-    flex-direction: column-reverse;
-  }
-  .walk h3 {
-    padding-top: 10%;
-  }
-  .walk .btn {
-    padding: 5% 50% 5% 50%;
-  }
 }
